(ocamlyacc parser)
(ocamllex lexer)
(library
  (name L1lib)
  (modules
    Front_end
    Interp_0
    Interp_1
    Interp_2
    Interp_3
    Ast
    Past
    Errors
    Option
    Free_vars
    Pptree
    Tests
    Parser
    Lexer
    Past_to_ast)
  (preprocess (pps ppx_yojson_conv))
)

(executable
  (name l1)
  (libraries L1lib)
  (modules l1)
 )